[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Hamza Waheed <137566252+hmzi67@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
