[tool.poetry]
name = "class5"
version = "0.1.0"
description = ""
authors = ["hmzi67 <hamzawaheed057@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
