[tool.poetry]
name = "class1-helloworld"
version = "0.1.0"
description = ""
authors = ["Hamza Waheed <137566252+hmzi67@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
