[tool.poetry]
name = "sign-up"
version = "0.1.0"
description = ""
authors = ["hmzi67 <hamzawaheed057@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
sqlmodel = "^0.0.18"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
psycopg = {extras = ["binary"], version = "^3.1.18"}
aiokafka = "^0.10.0"
protobuf = "^5.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
